Put `to-top` button in the footer

--- a/www/html/css.html
+++ b/www/html/css.html
@@ -675,9 +675,9 @@
                                                                                                 href="#BEM">BEM</a>
                 (bloc, élément, modificateur).
             </p>
-            <a href="#top-css" class="to-top link">HAUT</a></article>
+        </article>
     </section>
 </main>
-<footer>copyright stuff</footer>
+<footer>copyright stuff<a href="#top-css" class="to-top link">HAUT</a></footer>
 </body>
 </html>
