--- a/www/html/html.html
+++ b/www/html/html.html
@@ -332,9 +332,9 @@
                 de style de texte, qui permet d’indiquer notamment la police de caractères souhaitée pour l’affichage,
                 sa taille ou sa couleur.
             </p>
-            <a href="#top-html" class="to-top link">HAUT</a></article>
+        </article>
     </section>
 </main>
-<footer>copyright stuff</footer>
+<footer>copyright stuff<a href="#top-html" class="to-top link">HAUT</a></footer>
 </body>
 </html>
