--- a/www/html/js.html
+++ b/www/html/js.html
@@ -367,9 +367,9 @@
                 directement exploitable dans un navigateur.
             </p>
             <p>Enfin, JavaScript est également utilisé pour dynamiser le QML de la bibliothèque graphique Qt.</p>
-            <a href="#top-js" class="to-top link">HAUT</a></article>
+        </article>
     </section>
 </main>
-<footer>copyright stuff</footer>
+<footer>copyright stuff<a href="#top-js" class="to-top link">HAUT</a></footer>
 </body>
 </html>
