Correct paths, remove <a>/<button> relationship

--- a/www/index.html
+++ b/www/index.html
@@ -30,19 +30,19 @@
                 </ul>
             </nav>
         </div>
-        <form class="newsletter space-above" method="POST">
+        <form class="newsletter space-above" action="img/y2_web.mp4" method="POST">
             <fieldset class="newsletterbox">
                 <legend>Inscrivez-vous à notre newsletter ici</legend>
                 <div class="champ-recherche">
                     <label for="newsletter">Email</label>
                     <input name="newsletter" id="newsletter">
                 </div>
-                <button class="bouton-nl"><a href="img/y2_web.mp4">Soumettre</a></button>
+                <button class="bouton-nl">Soumettre</button>
             </fieldset>
         </form>
     </div>
     <div>
-        <form action="/htbin/login.py" method="GET" id="login-form">
+        <form action="htbin/login.py" method="GET" id="login-form">
             <fieldset class="formulaire">
                 <legend>Log&nbsp;in</legend>
                 <label for="username">Nom d'utilisateur</label>
@@ -60,6 +60,6 @@
     </div>
 </main>
 <footer>copyright stuff</footer>
-<script src="../js/login.js"></script>
+<script src="js/login.js"></script>
 </body>
 </html>
