--- a/www/index.html
+++ b/www/index.html
@@ -52,7 +52,7 @@
                 <input class="login-field" id="userpwd" type="password" placeholder="*" name="userpwd">
 
                 <div class="side-by-side space-above">
-                    <input id="login-submit" class="bouton-nl" type="submit" value="S'identifier" disabled/>
+                    <input id="login-submit" class="bouton-nl" type="submit" value="S'identifier"/>
                     <input type="reset" value="Réinitialiser"/>
                 </div>
             </fieldset>
