--- a/www/html/css.html
+++ b/www/html/css.html
@@ -18,6 +18,7 @@
 <main class="side-by-side">
     <nav>
         <ul class="list-option">
+            <li><a class="link" href="../index.html">Home</a></li>
             <li><a class="link" href="signup.html">Sign&nbsp;up</a></li>
             <li><a class="link" href="html.html">HTML</a></li>
             <li>CSS</li>
