--- a/www/html/html.html
+++ b/www/html/html.html
@@ -18,6 +18,7 @@
 <main class="side-by-side">
     <nav>
         <ul class="list-option">
+            <li><a class="link" href="../index.html">Home</a></li>
             <li><a class="link" href="signup.html">Sign&nbsp;up</a></li>
             <li>HTML</li>
             <li><a class="link" href="css.html">CSS</a></li>
