--- a/www/html/signup.html
+++ b/www/html/signup.html
@@ -18,6 +18,7 @@
 <main class="side-by-side">
     <nav>
         <ul class="list-option">
+            <li><a class="link" href="../index.html">Home</a></li>
             <li>Sign&nbsp;up</li>
             <li><a class="link" href="html.html">HTML</a></li>
             <li><a class="link" href="css.html">CSS</a></li>
