--- a/www/index.html
+++ b/www/index.html
@@ -23,6 +23,7 @@
             </header>
             <nav id="sommaire">
                 <ul class="list-option index-list">
+                    <li>Home</li>
                     <li><a class="link" href="html/signup.html">Sign up</a></li>
                     <li><a class="link" href="html/html.html">HTML</a></li>
                     <li><a class="link" href="html/css.html">CSS</a></li>
