--- a/www/index.html
+++ b/www/index.html
@@ -47,10 +47,10 @@
             <fieldset class="formulaire">
                 <legend>Log&nbsp;in</legend>
                 <label for="username">Nom d'utilisateur</label>
-                <input class="login-field" id="username" type="text" placeholder="*" name="username">
+                <input class="login-field" id="username" type="text" placeholder="*" name="username" required>
 
                 <label for="userpwd">Mot de passe</label>
-                <input class="login-field" id="userpwd" type="password" placeholder="*" name="userpwd">
+                <input class="login-field" id="userpwd" type="password" placeholder="*" name="userpwd" required>
 
                 <div class="side-by-side space-above">
                     <input id="login-submit" class="bouton-nl" type="submit" value="S'identifier"/>
