Provide a link to sign up from the login page

--- a/www/index.html
+++ b/www/index.html
@@ -58,6 +58,8 @@
                 </div>
             </fieldset>
         </form>
+        <p>Pas encore de profil&nbsp;?<br>
+            Créez-en un <a class="link" href="html/signup.html">ici</a></p>
     </div>
 </main>
 <footer>copyright stuff</footer>
