Change login method to post
we DO NOT want to send `userpwd` in clear, in the URL

--- a/www/index.html
+++ b/www/index.html
@@ -43,7 +43,7 @@
         </form>
     </div>
     <div>
-        <form action="htbin/login.py" method="GET" id="login-form">
+        <form action="htbin/login.py" method="POST" id="login-form">
             <fieldset class="formulaire">
                 <legend>Log&nbsp;in</legend>
                 <label for="username">Nom d'utilisateur</label>
