--- a/www/index.html
+++ b/www/index.html
@@ -14,12 +14,13 @@
 </noscript>
 <header class="top">
     <img src="img/logo_site.svg" alt="Logo du site 'coder pour les noobs'">
+    <h1 id="ajax-target" hidden></h1>
 </header>
 <main class="side-by-side">
     <div class="vertical-space-between">
         <div>
             <header>
-                <h1 id="titre-sommaire">Sommaire</h1>
+                <h2 id="titre-sommaire">Sommaire</h2>
             </header>
             <nav id="sommaire">
                 <ul class="list-option index-list">
