--- a/www/index.html
+++ b/www/index.html
@@ -32,13 +32,11 @@
                 </ul>
             </nav>
         </div>
-        <form class="newsletter space-above" action="img/y2_web.mp4" method="POST">
-            <fieldset class="newsletterbox">
+        <form class="space-above" action="img/y2_web.mp4" method="POST">
+            <fieldset>
                 <legend>Inscrivez-vous à notre newsletter ici</legend>
-                <div class="champ-recherche">
-                    <label for="newsletter">Email</label>
-                    <input name="newsletter" id="newsletter">
-                </div>
+                <label for="newsletter">Email</label>
+                <input name="newsletter" id="newsletter">
                 <button class="bouton-nl">Soumettre</button>
             </fieldset>
         </form>
