--- a/www/html/css.html
+++ b/www/html/css.html
@@ -26,14 +26,13 @@
         </ul>
     </nav>
     <section>
-        <div class="side-by-side">
-            <header>
-                <h1>Cascading Style Sheets</h1>
-            </header>
+        <header class="side-by-side page-header">
+            <h1>Cascading Style Sheets</h1>
+
             <a href="https://fr.wikipedia.org/wiki/Feuilles_de_style_en_cascade"><img class="img-link"
                                                                                       src="../img/css_logo.svg"
                                                                                       alt="une image du logo CSS3"></a>
-        </div>
+        </header>
         <article>
             <p>Les feuilles de style en cascade, généralement appelées CSS de l'anglais Cascading Style Sheets, forment
                 un langage informatique qui décrit la présentation des documents <a class="link"
