--- a/www/html/html.html
+++ b/www/html/html.html
@@ -26,14 +26,12 @@
         </ul>
     </nav>
     <section>
-        <div class="side-by-side">
-            <header>
-                <h1>HyperText Markup Language</h1>
-            </header>
+        <header class="side-by-side page-header">
+            <h1>HyperText Markup Language</h1>
             <a href="https://fr.wikipedia.org/wiki/Hypertext_Markup_Language"> <img class="img-link"
                                                                                     src="../img/html_logo.svg"
                                                                                     alt="une image du logo HTML5"> </a>
-        </div>
+        </header>
         <article>
             <p>Le HyperText Markup Language, généralement abrégé HTML ou, dans sa dernière version, HTML5, est le
                 langage de balisage conçu pour représenter les pages web.
