--- a/www/html/js.html
+++ b/www/html/js.html
@@ -26,13 +26,12 @@
         </ul>
     </nav>
     <section>
-        <div class="side-by-side">
-            <header>
-                <h1>JavaScript</h1>
-            </header>
+        <header class="side-by-side page-header">
+            <h1>JavaScript</h1>
             <a href="https://fr.wikipedia.org/wiki/JavaScript"> <img class="img-link"
                                                                      src="../img/js_logo.svg"
-                                                                     alt="une image du logo JavaScript"> </a></div>
+                                                                     alt="une image du logo JavaScript"> </a>
+        </header>
         <article>
             <p>JavaScript est un langage de programmation de scripts principalement employé dans les pages web
                 interactives et à ce titre est une partie essentielle des applications web. Avec les langages
@@ -55,7 +54,9 @@
                 langage supporte le paradigme objet, impératif et fonctionnel.
             </p>
             <p> JavaScript est le langage possédant <strong>le plus large écosystème</strong> grâce à son gestionnaire
-                de dépendances npm, avec environ <mark>500 000 paquets en août 2017</mark>.
+                de dépendances npm, avec environ
+                <mark>500 000 paquets en août 2017</mark>
+                .
             </p>
             <ol>
                 <li><a class="link" href="#Histoire">Histoire</a>
