--- a/www/html/signup.html
+++ b/www/html/signup.html
@@ -25,7 +25,7 @@
             <li><a class="link" href="js.html">JavaScript</a></li>
         </ul>
     </nav>
-    <form action="../htbin/register.py" method="POST" id="signup-form">
+    <form action="../htbin/register.py" method="POST" id="signup-form" class="side-by-side">
         <fieldset class="formulaire">
             <legend>Sign&nbsp;up</legend>
             <label for="lastname">Nom</label>
