--- a/www/index.html
+++ b/www/index.html
@@ -12,7 +12,7 @@
 </noscript>
 <header class="top ease-out">
     <a href="img/y2_web.mp4">
-        <img src="img/logo_site.svg" alt="Logo du site 'coder pour les noobs'">
+        <img class="img-link" src="img/logo_site.svg" alt="Logo du site 'coder pour les noobs'">
     </a>
 </header>
 <main class="side-by-side">
@@ -36,12 +36,12 @@
                 <input class="login-field" id="userpwd" type="password" name="userpwd">
                 <p id="ajax-target" hidden></p>
                 <div class="side-by-side space-above">
-                    <input id="login-submit" class="bouton-nl" type="submit" value="S'identifier"/>
-                    <input type="reset" value="Réinitialiser"/>
+                    <input class="form-button" id="login-submit" type="submit" value="S'identifier"/>
+                    <input class="form-button" type="reset" value="Réinitialiser"/>
                 </div>
             </fieldset>
         </form>
-        <p class="small">
+        <p>
             Pas encore de profil&nbsp;?<br>
             Créez-en un <a class="link" href="html/signup.html">ici</a>
         </p>
