Prettify, add bridge from signup to login

--- a/www/html/css.html
+++ b/www/html/css.html
@@ -678,6 +678,6 @@
         </article>
     </section>
 </main>
-<footer>copyright stuff<a href="#top-css" class="to-top link">HAUT</a></footer>
+<footer><span>< / ></span><a href="#top-css" class="to-top link">HAUT</a></footer>
 </body>
 </html>
