--- a/www/html/signup.html
+++ b/www/html/signup.html
@@ -64,11 +64,12 @@
             </fieldset>
         </form>
         <p>
-            azdiugoda
+            Déjà enregistré&nbsp;?<br>
+            Vous pouvez vous identifier <a class="link" href="../index.html">ici</a>
         </p>
     </div>
 </main>
-<footer>copyright stuff</footer>
+<footer><span>< / ></span></footer>
 <script src="../js/signup.js"></script>
 </body>
 </html>
