--- a/www/index.html
+++ b/www/index.html
@@ -43,11 +43,11 @@
         </form>
         <p>
             Pas encore de profil&nbsp;?<br>
-            Créez-en un <a class="link" href="html/signup.html">ici</a>
+            Vous pouvez en créer un <a class="link" href="html/signup.html">ici</a>
         </p>
     </div>
 </main>
-<footer>copyright stuff</footer>
+<footer><span>< / ></span></footer>
 <script src="js/login.js"></script>
 </body>
 </html>
