--- a/www/html/html.html
+++ b/www/html/html.html
@@ -334,6 +334,6 @@
         </article>
     </section>
 </main>
-<footer>copyright stuff<a href="#top-html" class="to-top link">HAUT</a></footer>
+<footer><span>< / ></span><a href="#top-html" class="to-top link">HAUT</a></footer>
 </body>
 </html>
