--- a/www/html/js.html
+++ b/www/html/js.html
@@ -372,6 +372,6 @@
         </article>
     </section>
 </main>
-<footer>copyright stuff<a href="#top-js" class="to-top link">HAUT</a></footer>
+<footer><span>< / ></span><a href="#top-js" class="to-top link">HAUT</a></footer>
 </body>
 </html>
