Fix html error, put ajax styles in CSS

--- a/www/html/css.html
+++ b/www/html/css.html
@@ -130,12 +130,12 @@
             <p>Les origines des CSS sont donc liées à trois possibilités majeures&nbsp;:</p>
             <ul>
                 <li> HTML est-il un langage de structuration ou un langage mixte de mise en forme et de structuration
-                   &nbsp?
+                   &nbsp;?
                 </li>
-                <li> Les choix de présentation de l'auteur doivent-ils avoir la primauté sur ceux de l'utilisateur&nbsp?
+                <li> Les choix de présentation de l'auteur doivent-ils avoir la primauté sur ceux de l'utilisateur&nbsp;?
                 </li>
                 <li> La réponse aux besoins est-elle un langage de description de la mise en forme ou un langage de
-                    transformation&nbsp?
+                    transformation&nbsp;?
                 </li>
             </ul>
             <h3 id="Les-premiers">Les premiers développements</h3>
@@ -700,6 +700,6 @@
         </article>
     </section>
 </main>
-<footer><span>< / ></span><a href="#top-css" class="to-top link">HAUT</a></footer>
+<footer><span>&lt;/&gt;</span><a href="#top-css" class="to-top link">HAUT</a></footer>
 </body>
 </html>
