--- a/www/html/js.html
+++ b/www/html/js.html
@@ -321,6 +321,6 @@
         </article>
     </section>
 </main>
-<footer><span>< / ></span><a href="#top-js" class="to-top link">HAUT</a></footer>
+<footer>&lt;/&gt;<a href="#top-js" class="to-top link">HAUT</a></footer>
 </body>
 </html>
