--- a/www/html/signup.html
+++ b/www/html/signup.html
@@ -69,7 +69,7 @@
         </p>
     </div>
 </main>
-<footer><span>< / ></span></footer>
+<footer>&lt;/&gt;</footer>
 <script src="../js/signup.js"></script>
 </body>
 </html>
