--- a/www/index.html
+++ b/www/index.html
@@ -47,7 +47,7 @@
         </p>
     </div>
 </main>
-<footer><span>< / ></span></footer>
+<footer>&lt;/&gt;</footer>
 <script src="js/login.js"></script>
 </body>
 </html>
