--- a/www/html/html.html
+++ b/www/html/html.html
@@ -299,6 +299,6 @@
         </article>
     </section>
 </main>
-<footer><span>< / ></span><a href="#top-html" class="to-top link">HAUT</a></footer>
+<footer>&lt;/&gt;<a href="#top-html" class="to-top link">HAUT</a></footer>
 </body>
 </html>
