Add names to footer and other files

--- a/www/html/css.html
+++ b/www/html/css.html
@@ -700,6 +700,6 @@
         </article>
     </section>
 </main>
-<footer><span>&lt;/&gt;</span><a href="#top-css" class="to-top link">HAUT</a></footer>
+<footer><span>By Matrod C. & Drai A., 2021-22</span><a href="#top-css" class="to-top link">HAUT</a></footer>
 </body>
 </html>
