--- a/www/html/signup.html
+++ b/www/html/signup.html
@@ -69,7 +69,7 @@
         </p>
     </div>
 </main>
-<footer>&lt;/&gt;</footer>
+<footer><span>By Matrod C. & Drai A., 2021-22</span></footer>
 <script src="../js/signup.js"></script>
 </body>
 </html>
