--- a/www/index.html
+++ b/www/index.html
@@ -1,3 +1,4 @@
+<!--Matrod, Charlotte & Drai, Alexis-->
 <!doctype html>
 <html lang="fr">
 <head>
@@ -47,7 +48,7 @@
         </p>
     </div>
 </main>
-<footer>&lt;/&gt;</footer>
+<footer><span>By Matrod C. & Drai A., 2021-22</span></footer>
 <script src="js/login.js"></script>
 </body>
 </html>
