--- a/www/html/signup.html
+++ b/www/html/signup.html
@@ -27,7 +27,7 @@
     </nav>
     <div class="side-by-side">
         <form action="../htbin/register.py" method="POST" id="signup-form">
-            <fieldset class="formulaire">
+            <fieldset>
                 <legend>Sign&nbsp;up</legend>
                 <label for="lastname">Nom</label>
                 <input class="signup-field" id="lastname" type="text" placeholder="*" name="lastname">
