--- a/www/index.html
+++ b/www/index.html
@@ -42,7 +42,7 @@
                 </div>
             </fieldset>
         </form>
-        <form action="htbin/chatsend.py" method="POST" id="chat-form" hidden="true">
+        <form action="htbin/chatsend.py" method="POST" id="chat-form" hidden>
             <fieldset>
                 <legend>Chatbox</legend>
                 <section id="comments-section"></section>
