--- a/www/index.html
+++ b/www/index.html
@@ -42,12 +42,12 @@
                 </div>
             </fieldset>
         </form>
-        <form action="htbin/chatsend.py" method="POST" id="chat-form" hidden>
+        <form id="chat-form" hidden>
             <fieldset>
                 <legend>Chatbox</legend>
                 <section id="comments-section"></section>
-                <label for="chat-input">votre message</label>
-                <input class="login-field" id="chat-input" type="text" name="username">
+                <label for="msg">votre message</label>
+                <input class="login-field" id="msg" type="text" name="msg">
                 <input class="form-button space-above" id="chat-submit" type="submit" value="Envoyer"/>
             </fieldset>
         </form>
