--- a/www/index.html
+++ b/www/index.html
@@ -46,6 +46,7 @@
             <fieldset>
                 <legend>Chatbox</legend>
                 <section id="comments-section"></section>
+                <p id="error-zone" class="warning"></p>
                 <label for="msg">votre message</label>
                 <input class="login-field" id="msg" type="text" name="msg">
                 <input class="form-button space-above" id="chat-submit" type="submit" value="Envoyer"/>
